managed to make it send message to all and send to self

--- a/client/index.html
+++ b/client/index.html
@@ -2,12 +2,12 @@
 <html lang="en">
 <head>
     <meta charset="UTF-8">
-    <title>Title</title>
+    <title>Chatroom</title>
     <link rel="stylesheet" href="stylesheet.css">
 </head>
 <body>
 
-<div id="container">
+<section id="container">
     <div id="chat-box">
         <div id="target"></div>
     </div>
@@ -17,7 +17,7 @@
         <button type="button" id="global">Send to all</button>
         <button type="button" id="self">Send to self</button>
     </div>
-</div>
+</section>
 
 <script src="/socket.io/socket.io.js"></script>
 <script src="clientJS.js"></script>
